--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <!-- <script src="../dist/main.js"></script> -->
     <!-- <script src="/main.js"></script> -->
+    <link rel="stylesheet" href="css/pandemic-test.css">
 </head>
 <body>
     <!-- <h1>H1-1 Title</h1> -->
